syntax = "proto3";

import "CommonMessages.proto";
import "TokenStatusInfo.proto";

option java_multiple_files = true;
option java_package = "ee.ria.xroad.signer.protocol.dto";

message TokenInfoProto {
  string type = 1;
 optional string friendlyName = 2;
  string id = 3;
  bool readOnly = 4;
  bool available = 5;
  bool active = 6;
  optional string serialNumber = 7;
  optional string label = 8;
  int32 slotIndex = 9;
  TokenStatusInfo status = 10;
  repeated KeyInfoProto keyInfo = 11;
  map<string, string> tokenInfo = 12;
}

message TokenInfoAndKeyIdProto {
  TokenInfoProto tokenInfo = 1;
  string keyId = 2;
}

message KeyInfoProto {
  bool available = 1;
  KeyUsageInfo usage = 2;
  optional string friendly_name = 3;
  string id = 4;
  optional string label = 5;
  string public_key = 6;
  repeated CertificateInfoProto certs = 7;
  repeated CertRequestInfoProto cert_requests = 8;
  string sign_mechanism_name = 9;
}

message CertificateInfoProto {
  optional ClientIdProto memberId = 1;
  bool active = 2;
  bool savedToConfiguration = 3;
  string status = 4;
  string id = 5;
  bytes certificate_bytes = 6;
  bytes ocsp_bytes = 7;
  // Add other fields as needed
}

message CertRequestInfoProto {
  string id = 1;
  ClientIdProto memberId = 2;
  string subject_name = 3;
  // Add other fields as needed
}

/* Key usage can either be signing or authentication. */
enum KeyUsageInfo {
  KEY_USAGE_UNKNOWN = 0;
  SIGNING = 1;
  AUTHENTICATION = 2;
}
