syntax = "proto3";

option java_multiple_files = true;

import "Tokens.proto";
import "TokenStatusInfo.proto";

package org.niis.xroad.signer.proto;

service TokensApi {
  rpc getTokenById (GetTokenByIdRequest) returns (TokenInfoProto) {}

  rpc getTokenByKey (GetTokenByKeyIdRequest) returns (TokenInfoProto) {}

  rpc getTokenAndKeyIdByCertRequestId (GetTokenByCertRequestIdRequest) returns (TokenInfoAndKeyIdProto) {}

  rpc getTokenAndKeyIdByCertHash (GetTokenByCertHashRequest) returns (TokenInfoAndKeyIdProto) {}

  rpc listTokens (Empty) returns (ListTokensResponse) {}

  rpc activateToken (ActivateTokenRequest) returns (Empty) {}
}

/* Generic empty request/response. */
message Empty {
}

message ListTokensResponse {
  repeated TokenInfoProto tokens = 1;
}

message ActivateTokenRequest{
  string tokenId = 1;
  bool  activate = 2;
}

message GetTokenByIdRequest {
  string tokenId = 1;
}

message GetTokenByKeyIdRequest {
  string keyId = 1;
}

message GetTokenByCertRequestIdRequest {
  string certRequestId = 1;
}

message GetTokenByCertHashRequest {
  string certHash = 1;
}
